Bug 80327 - Slide Transition: Sound list box does not include all sounds when is in non-English UI
Summary: Slide Transition: Sound list box does not include all sounds when is in non-E...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: All Linux (All)
: medium major
Assignee: Julien Nabet
URL:
Whiteboard: target:4.4.0 target:4.3.0.2 target:4.2.6
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-21 12:57 UTC by Kevin Suo
Modified: 2014-07-13 07:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-06-21 12:57:15 UTC
Steps to reproduce:
1. Switch to English UI;
2. On sidebar, click on "Slide Transition" pane.
3. Within the slide transition sidebar window, click the "sound" list box. Observe that there are many sounds in the list.
4. Switch to any non-English UI and do the same as above. You will notice that only "No Sound; Stop Previous Sound; Other Sounds..." are in the list.

Current behaviour: (see the steps above).
Expected: All the sounds in step 3 of english UI are included in non-english UI at step 4.

OS and Version:
Ubuntu 14.04 x86
Version 4.3.0.1, 4.2.5.2.
"FirasH" says it's also reproducible in 4.1.6.2.

More info:
I see from pootle:
/ LibreOffice 4.3 – UI / sd/uiconfig/simpress/ui.po
slidetransitionspanel.ui sound_list 0 stringlist.text
(Only "No Sound; Stop Previous Sound; Other Sounds..." are translatable. All other sound items are not shown in pootle.
Comment 1 Firas Hanife 2014-06-21 12:58:56 UTC
I'm confirming on openSUSE with 4.1.6.2 (Italian language).

Changing Status to NEW.
Comment 2 Julien Nabet 2014-06-21 14:19:23 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Indeed, sd/uiconfig/simpress/ui/slidetransitionspanel.ui contains only 3 entries, see http://opengrok.libreoffice.org/xref/core/sd/uiconfig/simpress/ui/slidetransitionspanel.ui#138
Comment 3 Julien Nabet 2014-06-21 16:20:12 UTC
Unwinding this, the problem comes from http://opengrok.libreoffice.org/xref/core/svx/source/gallery2/gallery1.cxx#169
Fallback strings are in English, when calling ImplGetThemeEntry (see http://opengrok.libreoffice.org/xref/core/svx/source/gallery2/gallery1.cxx#ImplGetThemeEntry), it compares with localized theme names.

I tried to use the other implementation of ImplGetThemeEntry which takes an id as parameter but some theme ("sounds" included) has "0" value, instead of expected "18".
Comment 4 Commit Notification 2014-06-21 17:57:14 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4ca1f900a5585d35af04159bdd854f10b495355

Resolves: fdo#80327 Sound list box when non-English UI



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2014-06-21 18:18:52 UTC
Gerrit review for:
- 4.3: https://gerrit.libreoffice.org/9845
- 4.2: https://gerrit.libreoffice.org/9846
Comment 6 Commit Notification 2014-06-23 07:40:04 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=52613b9b632721ebb5167a4d9529c242a0b907da&h=libreoffice-4-3

Resolves: fdo#80327 Sound list box when non-English UI


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kevin Suo 2014-06-23 09:16:05 UTC
(In reply to comment #6)

Does it mean that the sound list items will be translatable on pootle after this commit? I do not see any of these strings at this moment.

Thanks!
Comment 8 Julien Nabet 2014-06-23 09:23:00 UTC
suokunlong: no, they'll just appear with the patch.
Comment 9 Kevin Suo 2014-06-23 09:57:33 UTC
(In reply to comment #8)
> suokunlong: no, they'll just appear with the patch.

So, I assume:
*  With this patch, all the sound list items will appear in both english and non-english UI.
* Athrough they will appear in non-english UI, they are not translated (they are in english when in non-english UI).

Am I correct? If so, I believe we should make these sound names translatable. So maybe another patch is needed?
Comment 10 Julien Nabet 2014-06-23 10:03:18 UTC
suokunlong: I don't think it's possible since these names correspond to files.
See http://opengrok.libreoffice.org/xref/core/extras/source/gallery/sounds/
But perhaps I'm wrong.
Comment 11 Julien Nabet 2014-06-24 08:00:51 UTC
*** Bug 74314 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2014-06-24 15:42:48 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a8a97dbc56b9db3ef59c324ada05981d00a14b2&h=libreoffice-4-2

Resolves: fdo#80327 Sound list box when non-English UI


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Julien Nabet 2014-06-24 16:05:02 UTC
Following the push on 4.3 and 4.2 branches, let's put this one to FIXED.
Comment 14 vulcain 2014-07-08 20:57:28 UTC
\o/

I confirm bug is fixed in LibreOffice 4.3.0.2 Build ID: 14ed55896fdfcb93ff437b85c4f3e1923d2b1409 on Ubuntu 12.04

Tested with french language
Comment 15 vulcain 2014-07-13 07:00:58 UTC
I confirm this bug is fixed in LibreOffice 4.2.6.1 Build ID: 5fdddf655fba363e34f755715238d0943a44857e

Tested on Ubuntu 12.04.4 x86_64