Resolves: fdo#80327 Sound list box when non-English UI

Fallback strings are in English wheresas ImplGetThemeEntry expects localized strings
Let's put localized strings in fallback to make ImplGetThemeEntry happy

Change-Id: I27dd992bac4f5aaf6e0e6237fe59dac990f11c92
Reviewed-on: https://gerrit.libreoffice.org/9846
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>